--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Unfollowers</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWELKBY42R"></script>
   </head>
   <body>
     <div id="app"></div>
