--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Unfollowers</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWELKBY42R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZWELKBY42R');
+    </script>
   </head>
   <body>
     <div id="app"></div>
